# template-django-project

./: .gitignore  db.sqlite3  pyproject.toml
template_django_project/: asgi.py  settings.py  urls.py  wsgi.py
