[tool.poetry]
name = "template-django-project"
version = "0.1.0"
description = ""
authors = ["grm <golosov_SA@mail.ru>"]
readme = "README.md"
packages = [{include = "template_django_project"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
